hack to fix firefox wrapping logo - but now shrink window breaks

--- a/appengine/static/src/css/dialog.css
+++ b/appengine/static/src/css/dialog.css
@@ -11,7 +11,7 @@ div.SP_Dialog label.left {
     float: left;
     clear: left;
     text-align: right;
-    width: 95px;
+    width: 94px;
     margin: 1px 0 6px 0;
     padding-right: 5px;
 }
